[package]
name = "evolver"
version = "0.1.0"
authors = ["Dominik Berner <dominik.berner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.14", features=['crossterm']}
crossterm = "0.19.0"